# valorant-premier-analyst

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.web  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  railway.toml
data/: roster_history.json
data/bios/: fd97d528-2166-55c0-b1a1-b26e856221e6.md
data/strategy/: 120pingがIGL__120.json
db/: valorant.duckdb
scripts/: _check_rounds.py  _check_teams.py  _inspect_db.py  _list_players.py  _roster.py  dump_team.py  inspect_modes.py
scripts/sql/: team_analytics.sql
src/valorant_analyst/: __init__.py  cli.py  config.py  serve_production.py
src/valorant_analyst/analysis/: __init__.py  metrics.py  roster.py
src/valorant_analyst/api/: __init__.py  henrik_client.py
src/valorant_analyst/processing/: __init__.py  normalize.py
src/valorant_analyst/reporting/: __init__.py  markdown_report.py
src/valorant_analyst/server/: __init__.py  app.py  deps.py  persist_migrate.py  scheduler.py  schemas.py  vods.py
src/valorant_analyst/storage/: __init__.py  duckdb_store.py  raw_store.py  roster_history.py
tests/: test_cli_roster_sync.py  test_cli_team_sync.py  test_duckdb_store.py  test_henrik_client.py  test_metrics.py  test_normalize.py  test_persist_migrate.py  test_raw_store.py  test_roster.py  test_roster_history.py  test_server_players.py  test_server_strategy.py  test_server_sync.py  test_server_teams.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AgentBadge.tsx  AvatarUpload.tsx  Card.tsx  CopyMatchId.tsx  CurrentRoster.tsx  Header.tsx  Pill.tsx  PlayerAvatar.tsx  PlayerBio.tsx  RoundTimeline.tsx  Scoreboard.tsx  SeasonToggle.tsx  (+3 more)
(+39 files in other folders)
